<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background">


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="110dp"
        android:layout_height="74dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/configurationButton"
        android:src="@drawable/config"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/fromConfigToMain"
        android:layout_width="58dp"
        android:layout_height="83dp"
        android:layout_marginTop="4dp"
        android:contentDescription="@string/backButton"
        android:src="@drawable/go_back"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/mute"
        android:layout_width="114dp"
        android:layout_height="94dp"
        android:layout_marginStart="116dp"
        android:layout_marginLeft="116dp"
        android:layout_marginTop="140dp"
        android:contentDescription="@string/mute"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/mute" />

    <ImageView
        android:id="@+id/unmute"
        android:layout_width="114dp"
        android:layout_height="94dp"
        android:layout_marginStart="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginTop="140dp"
        android:contentDescription="@string/unmute"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/som" />

    <LinearLayout
         android:id="@+id/linearLayout1"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/unmute">

         <ImageView
             android:id="@+id/imageView6"
             android:layout_width="15dp"
             android:layout_height="95dp"
             android:layout_weight="1"
             app:srcCompat="@mipmap/noadat"
             android:contentDescription="@string/noAd" />

         <TextView
             android:id="@+id/buyPremium"
             android:layout_marginTop="15dp"
             android:layout_width="0sp"
             android:layout_height="match_parent"
             android:layout_weight="3"
             android:text="@string/noAd"
             android:textColor="@color/white"
             android:textSize="25sp" />

     </LinearLayout>

     <LinearLayout
         android:id="@+id/linearLayout2"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/linearLayout1">

         <ImageView
             android:id="@+id/imageView8"
             android:layout_width="15dp"
             android:layout_height="95dp"
             android:layout_weight="1"
             app:srcCompat="@mipmap/starat"
             android:contentDescription="@string/review" />

         <TextView
             android:id="@+id/review"
             android:layout_marginTop="15dp"
             android:layout_width="0sp"
             android:layout_height="match_parent"
             android:layout_weight="3"
             android:text="@string/review"
             android:textColor="@color/white"
             android:textSize="25sp" />

     </LinearLayout>

     <LinearLayout
         android:id="@+id/linearLayout3"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/linearLayout2">

         <ImageView
             android:id="@+id/imageView9"
             android:layout_width="15dp"
             android:layout_height="95dp"
             android:layout_weight="1"
             app:srcCompat="@mipmap/bugsat"
             android:contentDescription="@string/bug" />

         <TextView
             android:id="@+id/reportBugs"
             android:layout_width="0sp"
             android:layout_height="match_parent"
             android:layout_marginTop="17dp"
             android:layout_weight="3"
             android:text="@string/bug"
             android:textColor="@color/white"
             android:textSize="25sp" />

     </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>