<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Tips"
    android:background="@mipmap/background">
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="31dp"
        android:layout_marginLeft="31dp"
        android:layout_marginTop="263dp"
        android:text="@string/buytip"
        android:textColor="@color/white"
        android:textSize="25sp"
        android:gravity="center"/>

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="185dp"
        android:layout_height="223dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginStart="113dp"
        android:layout_marginLeft="113dp"
        android:layout_marginTop="35dp"
        android:layout_marginEnd="112dp"
        android:layout_marginRight="112dp"
        app:srcCompat="@mipmap/lampat"
        android:contentDescription="@string/tipButton" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="179dp"
        android:layout_height="216dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="19dp"
        android:layout_marginLeft="19dp"
        android:layout_marginTop="347dp"
        app:srcCompat="@mipmap/moldura"
        android:contentDescription="@string/frame"/>

    <ImageView
        android:id="@+id/imageView10"
        android:layout_width="179dp"
        android:layout_height="216dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="228dp"
        android:layout_marginLeft="228dp"
        android:layout_marginTop="347dp"
        app:srcCompat="@mipmap/moldura"
        android:contentDescription="@string/frame"/>

    <ImageView
        android:id="@+id/yesButton"
        android:layout_width="109dp"
        android:layout_height="169dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="55dp"
        android:layout_marginLeft="55dp"
        android:layout_marginTop="366dp"
        app:srcCompat="@mipmap/sim"
        android:contentDescription="@string/yes"/>

    <ImageView
        android:id="@+id/noButton"
        android:layout_width="113dp"
        android:layout_height="141dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="264dp"
        android:layout_marginLeft="264dp"
        android:layout_marginTop="371dp"
        app:srcCompat="@mipmap/naoat"
        android:contentDescription="@string/no"/>

    <ImageView
        android:id="@+id/back"
        android:layout_width="68dp"
        android:layout_height="76dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="-10dp"
        android:layout_marginLeft="-10dp"
        android:layout_marginTop="-16dp"
        app:srcCompat="@mipmap/backat"
        android:contentDescription="@string/backButton"/>

    <ImageView
        android:id="@+id/imageView11"
        android:layout_width="59dp"
        android:layout_height="114dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="354dp"
        android:layout_marginLeft="354dp"
        android:layout_marginTop="-32dp"
        app:srcCompat="@mipmap/newccoin"
        android:contentDescription="@string/coinsButton"/>

    <TextView
        android:id="@+id/coinsQty"
        android:layout_width="32dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="368dp"
        android:layout_marginLeft="368dp"
        android:layout_marginTop="19dp"
        android:gravity="center"
        android:textColor="@color/white" />

    <TextView
        android:id="@+id/showTip"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="616dp"
        android:gravity="center"/>

</RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>