<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Level"
    android:background="@drawable/gradient_background">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/buyLives"
            android:layout_width="130dp"
            android:layout_height="95dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="142dp"
            android:layout_marginLeft="142dp"
            android:layout_marginTop="-23dp"
            android:contentDescription="@string/numberOfLives"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@mipmap/novocoracao" />

        <ImageView
            android:id="@+id/playSoundButton"
            android:layout_width="wrap_content"
            android:layout_height="135dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginStart="138dp"
            android:layout_marginLeft="138dp"
            android:layout_marginTop="111dp"
            android:layout_marginEnd="113dp"
            android:layout_marginRight="113dp"
            android:contentDescription="@string/playSoundButton"
            android:src="@drawable/play" />

        <ImageView
            android:id="@+id/tipButton"
            android:layout_width="wrap_content"
            android:layout_height="139dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginStart="2dp"
            android:layout_marginLeft="2dp"
            android:layout_marginTop="109dp"
            android:layout_marginEnd="328dp"
            android:layout_marginRight="328dp"
            android:contentDescription="@string/tipButton"
            app:srcCompat="@mipmap/lampat" />

        <ImageView
            android:id="@+id/nextLevelButton"
            android:layout_width="65dp"
            android:layout_height="55dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="349dp"
            android:layout_marginLeft="349dp"
            android:layout_marginTop="151dp"
            android:contentDescription="@string/nextLevelButton"
            android:src="@drawable/skip_level" />

        <ImageView
            android:id="@+id/backButton"
            android:layout_width="63dp"
            android:layout_height="50dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="1dp"
            android:layout_marginLeft="1dp"
            android:layout_marginTop="0dp"
            android:contentDescription="@string/backButton"
            android:src="@drawable/go_back" />

        <ImageView
            android:id="@+id/coinsButton"
            android:layout_width="68dp"
            android:layout_height="97dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="348dp"
            android:layout_marginLeft="348dp"
            android:layout_marginTop="-23dp"
            android:contentDescription="@string/coinsButton"
            app:srcCompat="@mipmap/newccoin" />

        <TextView
            android:id="@+id/coinsQty"
            android:layout_width="37dp"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/coinsButton"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginEnd="12dp"
            android:layout_marginRight="12dp"
            android:layout_marginBottom="35dp"
            android:gravity="center"
            android:textColor="@color/white"/>

        <TextView
            android:id="@+id/lives"
            android:layout_width="19dp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="198dp"
            android:layout_marginLeft="198dp"
            android:layout_marginTop="17dp"
            android:gravity="center"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/button1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/playSoundButton"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_marginTop="100dp"
            android:background="@drawable/button_style"
            android:gravity="center"
            android:onClick="onClick"
            android:textColor="#55BBEF"
            app:backgroundTint="@color/white" />

        <Button
            android:id="@+id/button2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/button1"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_marginTop="2dp"
            android:background="@drawable/button_style"
            android:gravity="center"
            android:onClick="onClick"
            android:textColor="#55BBEF"
            app:backgroundTint="@color/white" />

        <Button
            android:id="@+id/button3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/button2"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_marginTop="2dp"
            android:background="@drawable/button_style"
            android:gravity="center"
            android:onClick="onClick"
            android:textColor="#55BBEF"
            app:backgroundTint="@color/white" />

        <Button
            android:id="@+id/button4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/button3"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_marginStart="0dp"
            android:layout_marginLeft="0dp"
            android:layout_marginTop="2dp"
            android:background="@drawable/button_style"
            android:gravity="center"
            android:onClick="onClick"
            android:textColor="#55BBEF"
            app:backgroundTint="@color/white" />


    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>